lustre/include/obd_support.h
@@ -244,6 +244,7 @@ extern char obd_jobid_var[];
 #define OBD_FAIL_MDS_STATFS_SPOOF	 0x168
 #define OBD_FAIL_MDS_REINT_OPEN		 0x169
 #define OBD_FAIL_MDS_REINT_OPEN2	 0x16a
+#define OBD_FAIL_MDS_COMMITRW_DELAY	 0x16b
 
 /* layout lock */
 #define OBD_FAIL_MDS_NO_LL_GETATTR	 0x170
